--- a/src/components/chat/ChatBox/ChatBox.module.scss
+++ b/src/components/chat/ChatBox/ChatBox.module.scss
@@ -17,7 +17,7 @@
     flex-direction: column;
     justify-content: flex-end;
     height: 75vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .noConversation {
