--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 0 20px;
   height: 60px;
-  background-color: #fff;
+  background-color: transparent;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
