--- a/src/components/game/GameTextField/GameTextField.module.scss
+++ b/src/components/game/GameTextField/GameTextField.module.scss
@@ -1,25 +1,65 @@
 .wrapper {
   display: flex;
-  justify-content: space-around;
   width: 100%;
+  .buttons {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin: 20px;
+    .boolBtn {
+      width: 120px;
+      height: 36px;
+      margin-right: 20px;
+    }
+  }
   .textfield {
     display: flex;
-    width: 80%;
+    width: 100%;
     margin-right: 20px;
     align-items: center;
-    justify-content: space-around;
-    textarea {
-      width: 500px;
-      margin-right: 10px;
+    .inputfield {
+      display: flex;
+      width: 50%;
+      margin-left: 20px;
+      margin-right: 20px;
+      flex-direction: column;
+      input {
+        padding: 20px;
+        border-radius: 10px;
+        background-color: black;
+        color: white;
+        outline: none;
+        border: none;
+      }
+      label {
+        color: white;
+        margin-bottom: 10px;
+        font-size: 20px;
+      }
     }
-    select {
-      width: 30%;
+    .selectItem {
+      width: 20%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      label {
+        margin-bottom: 20px;
+        font-size: 20px;
+        color: white;
+      }
+      select {
+        width: 100%;
+        padding: 10px;
+        color: white !important;
+        background-color: black;
+      }
     }
   }
   .btnSection {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 20%;
+    margin-left: 20px;
   }
 }
