modified files: modified:   package-lock.json         modified:   package.json         new file:   public/puzzles.png         new file:   src/components/card/card.module.scss         new file:   src/components/card/index.tsx         new file:   src/components/shared/Footer/Footer.module.scss         new file:   src/components/shared/Footer/index.tsx         modified:   src/components/shared/Header/Header.module.scss         modified:   src/components/shared/Header/index.tsx         new file:   src/components/welcome-text/index.tsx         new file:   src/components/welcome-text/text.module.scss         modified:   src/pages/index.tsx         modified:   src/styles/globals.scs

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,10 +5,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Quicksand', sans-serif;
+    
 }
 
 .content {
-    margin-top: 60px;
+    margin-top: 93px;
+    background-color: #120428;
 }
 
 .MuiPaper-root-MuiDialog-paper {
