--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -2,10 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
-  height: 60px;
-  background-color: transparent;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  padding: 0 40px;
+  height: 95px;
+  background-color: #484153;
   position: fixed;
   top: 0;
   left: 0;
@@ -27,16 +26,15 @@
       margin-right: 20px;
       list-style-type: none;
       li {
-        margin: 0 10px;
+        margin: 0 20px;
         a {
           margin: 0 10px;
-          color: #000;
+          color: #FFFFFF;
           text-decoration: none;
-          font-size: 16px;
-          text-transform: uppercase;
+          font-size: 18px;
           font-weight:600;
           &:hover {
-            color: #000;
+            color: #120428;
             text-decoration: underline;
           }
         }
