--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,9 +8,13 @@
     
 }
 
+.wrapper {
+    height: 100%;
+}
+
 .content {
     margin-top: 93px;
-    background-color: #120428;
+    height: 100%;
 }
 
 .MuiPaper-root-MuiDialog-paper {
