--- a/src/components/chat/ChatBox/ChatBox.module.scss
+++ b/src/components/chat/ChatBox/ChatBox.module.scss
@@ -1,7 +1,8 @@
 .chatBoxWrapper {
     display: flex;
+    position: relative;
     flex-direction: column;
-    height: 100%;
+    height: calc(100vh - 95px);
     width: 100%;
     background-color: #fff;
     border-radius: 10px;
