--- a/src/styles/Chat.module.scss
+++ b/src/styles/Chat.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     height: 100%;
     width: 100%;
+    overflow: hidden;
   &Menu {
     width: 30%;
     height: calc(100vh - 90px);
