--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -28,8 +28,8 @@
       li {
         margin: 0 20px;
         a {
-          margin: 0 10px;
-          color: #FFFFFF;
+          margin: 0, 10px;
+          color: #23B1D0;
           text-decoration: none;
           font-size: 18px;
           font-weight:600;
