--- a/src/components/chat/ChatBox/ChatBox.module.scss
+++ b/src/components/chat/ChatBox/ChatBox.module.scss
@@ -2,22 +2,21 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    height: calc(100vh - 95px);
     width: 100%;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 20px 20px 0 0;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    margin-left: 30px;
 }
 
 .chatBoxTop {
-    padding: 20px;
-    background-color: lightgray;
-    border-radius: 10px;
+    padding: 0 20px;
+    height: 100%;
+    background-color: #120428;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 75vh;
     overflow-y: auto;
 }
 
@@ -41,6 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: relative;
 }
 
 .chatMessageInput {
@@ -48,14 +48,12 @@
     height: 90px;
     padding: 10px;
 }
-
-.chatSubmitButton {
-    width: 70px;
-    height: 40px;
-    border: none;
-    background-color: teal;
-    border-radius: 5px;
-    color: white;
-    font-weight: 500;
-    cursor: pointer;
-}
+.btnSection {
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
