--- a/src/components/chat/ChatTabs/ChatTabs.module.scss
+++ b/src/components/chat/ChatTabs/ChatTabs.module.scss
@@ -7,17 +7,11 @@
   ul {
     list-style: none;
     li {
+     button {
       margin: 0.5rem 0;
-      padding: 0.5rem;
-      background-color: #F3FB8C;
-        border-radius: 5px;
-      cursor: pointer;
-      &:hover {
-        opacity: 0.8;
-      }
-      &:active {
-        transform: scale(0.95);
-      }
+      width: 100%;
+      text-align: left;
+     }
     }
   }
 }
