--- a/src/components/chat/Message/Message.module.scss
+++ b/src/components/chat/Message/Message.module.scss
@@ -1,28 +1,37 @@
-.message {
+.messageWrapper {
+  display: flex;
+  margin: 0.5rem 0;
+  .avatar {
+    margin-right: 10px;
+    &.isUnvisible {
+      visibility: hidden;
+    }
+  }
+  .message {
     display: flex;
     align-items: center;
-    margin: 0.5rem 0;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    background-color: #f1f0f0;
-    max-width: 80%;
-    width: 100%;
+    padding: 1rem;
+    border-radius: 1rem 2rem 2rem 0;
+    background-color: #484153;
+    max-width: 500px;
     word-wrap: break-word;
     color: black;
     position: relative;
+    .messageText {
+      margin-left: 0.5rem;
+      font-size: 1rem;
+    }
   &.my {
-    background-color: lightblue;
-  }
-  .messageText {
-    margin-left: 0.5rem;
-    font-size: 1rem;
+    background-color: #B885F4;
   }
   &Content {
     .timeAgo {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
+      position: relative;
+      bottom: -10px;
+      font-size: 0.8rem;
+      color: gray;
       margin-left: 20px;
     }
   }
+}
 }
