--- a/src/components/game/GameBox/GameBox.module.scss
+++ b/src/components/game/GameBox/GameBox.module.scss
@@ -1,9 +1,9 @@
 .chatBoxWrapper {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 120px);
   width: 100%;
   background-color: #120428;
+  border-radius: 20px;
   position: relative;
   overflow: hidden;
   padding-bottom: 20px;
