--- a/src/components/game/GameHeader/GameHeader.module.scss
+++ b/src/components/game/GameHeader/GameHeader.module.scss
@@ -4,8 +4,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #fff;
-  border-bottom: 1px solid #e6e6e6;
+  background-color: #000;
+  border-radius: 20px 20px 0 0;
+  color: #fff;
   .chatName {
     display: flex;
     align-items: center;
@@ -13,13 +14,12 @@
         margin: 0;
         font-size: 24px;
         font-weight: 700;
-        color: #000;
     }
     h2 {
         margin: 0;
         font-size: 32px;
         font-weight: 700;
-        color: #000;
+        text-transform: capitalize;
     }
   }
   .status {
