--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -1,6 +1,5 @@
 .header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 0 40px;
   height: 95px;
@@ -15,16 +14,22 @@
     align-items: center;
     margin-left: 20px;
     img {
-      width: 40px;
-      height: 40px;
+      width: 60px;
+      height: 60px;
     }
   }
   nav {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
     ul {
       display: flex;
       align-items: center;
       margin-right: 20px;
       list-style-type: none;
+      &:first-child {
+        margin-left: 20px;
+      }
       li {
         margin: 0 20px;
         a {
@@ -34,8 +39,14 @@
           font-size: 18px;
           font-weight:600;
           &:hover {
-            color: #120428;
             text-decoration: underline;
+          }
+        }
+        &.active {
+          a {
+            color: #F3FB8C;
+            font-size: 18px;
+            font-weight:600;
           }
         }
       }
