fixing some issues

--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -29,12 +29,12 @@
         margin: 0 20px;
         a {
           margin: 0, 10px;
-          color: #23B1D0;
+          color: #fff;
           text-decoration: none;
           font-size: 18px;
           font-weight:600;
           &:hover {
-            color: #120428;
+            color: #B885F4;
             text-decoration: underline;
           }
         }
