--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,28 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
-    
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Quicksand", sans-serif;
 }
 
 .wrapper {
-    height: 100%;
+  height: 100%;
 }
 
 .content {
-    margin-top: 93px;
-    height: 100%;
+  margin-top: 93px;
+  height: 100%;
 }
 
 .MuiPaper-root-MuiDialog-paper {
-    width: 100% !important;       
+  width: 100% !important;
 }
 
 .auth-box {
-    background: url('/emoji-img.png') no-repeat bottom center/cover;
-    height: calc(100vh - 93px);
-    width: 100%;
+  background: url("/emoji-img.png") no-repeat bottom center/cover;
+  height: calc(100vh - 93px);
+  width: 100%;
+}
+
+.errorWrapper {
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 93px);
+  justify-content: center;
+  align-items: center;
+  background-color: #120428;
+  .errorMessage {
+    display: flex;
+    align-items: center;
+
+    h1 {
+      font-size: 32px;
+      color: #ffc700;
+      margin-bottom: 20px;
+    }
+    p {
+      color: white;
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    a {
+      color: #23b1d0;
+      text-decoration: none;
+    }
+  }
 }
