finish mobile view chats

--- a/src/components/chat/ChatBox/ChatBox.module.scss
+++ b/src/components/chat/ChatBox/ChatBox.module.scss
@@ -1,68 +1,62 @@
 .chatBoxWrapper {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    width: 100%;
-    background-color: #fff;
-    border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin-left: 30px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 20px 20px 0 0;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin-left: 30px;
 }
 
 .chatBoxTop {
-    padding: 0 20px;
-    height: 100%;
-    background-color: #120428;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    overflow-y: auto;
-}
-
-.noConversation {
-    height: 90vh;
-    background-color: lightgray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    h2 {
-        font-size: 64px;
-        text-transform: uppercase;
-        font-weight: 900;
-        max-width: 60vh;
-        color: #ccc;
-    }
+  padding: 0 20px;
+  height: 100%;
+  background-color: #120428;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow-y: auto;
+  position: relative;
 }
 
 .chatBoxBottom {
-    margin-top: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  padding-bottom: 10px;
 }
 
 .chatMessageInput {
-    width: 80%;
-    height: 90px;
-    padding: 10px;
+  width: 80%;
+  height: 90px;
+  padding: 10px;
 }
 .chatSubmitButton {
-    width: 70px;
-    height: 40px;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-weight: 500;
-    cursor: pointer;
+  width: 70px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
 }
 .btnSection {
-    position: absolute;
-    right: 0px;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 789px) {
+  .chatBoxWrapper {
+    margin-left: 0;
+    border-radius: 0;
   }
+}
