--- a/src/components/chat/ChatHeader/ChatHeader.module.scss
+++ b/src/components/chat/ChatHeader/ChatHeader.module.scss
@@ -1,20 +1,26 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  background-color: black;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  color: white;
+  .chatInfo {
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
     align-items: center;
-    background-color: black;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    color: white;
-    .chatInfo {
-        display: flex;
-        align-items: center;
-        p {
-            font-size: 24px;
-            text-transform: capitalize;
-            color: white;
-            margin-left: 20px;
-        }
+    p {
+      font-size: 24px;
+      text-transform: capitalize;
+      color: white;
+      margin-left: 20px;
     }
+  }
+}
+
+@media screen and (max-width: 789px) {
+  .header {
+    border-radius: 0;
+  }
 }
