--- a/src/components/game/GameBox/GameBox.module.scss
+++ b/src/components/game/GameBox/GameBox.module.scss
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 1.2rem;
     z-index: 11;
     &.alertOpen {
       background-color: rgba($color: #000000, $alpha: 0.5);
@@ -31,4 +31,10 @@
   margin: 10px;
   height: 100%;
   padding: 20px 0;
+}
+
+@media screen and (max-width: 789px) {
+  .chatBoxWrapper {
+    border-radius: 0;
+  }
 }
