--- a/src/components/game/GameTextField/GameTextField.module.scss
+++ b/src/components/game/GameTextField/GameTextField.module.scss
@@ -1,12 +1,12 @@
 .wrapper {
   display: flex;
   width: 100%;
-  border-top: 1px solid #F3FB8C;
+  border-top: 1px solid #f3fb8c;
   .textInfo {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    margin: 0.8rem 0;
     width: 100%;
     h4 {
       color: white;
@@ -18,27 +18,27 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    margin: 20px;
+    margin: 1.2rem;
     .boolBtn {
-      width: 120px;
-      height: 36px;
-      margin-right: 20px;
+      width: 7rem;
+      height: 2.2remx;
+      margin-right: 1.2rem;
     }
   }
   .textfield {
     display: flex;
     width: 100%;
-    margin: 0 20px;
+    margin: 0 1.2rem;
     align-items: center;
     position: relative;
     .inputfield {
       display: flex;
       width: 70%;
-      margin-left: 20px;
-      margin-right: 20px;
+      margin-left: 1.2rem;
+      margin-right: 1.2rem;
       flex-direction: column;
       input {
-        border-radius: 20px;
+        border-radius: 1.2rem;
         background-color: black;
       }
     }
@@ -46,27 +46,59 @@
       width: 20%;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
       label {
-        margin-bottom: 20px;
-        font-size: 20px;
+        font-size: 0.9rem;
+        margin-bottom: 0.9rem;
         color: white;
       }
       select {
         width: 100%;
-        padding: 10px;
+        padding: 0.8rem;
         color: white !important;
         background-color: black;
       }
     }
-    .btnSection {
-      position: absolute;
-      right: 0px;
-      top: 50%;
-      transform: translateY(-50%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .wrapper {
+    .textfield {
+      margin: 0 10px;
+      .selectItem {
+        width: 30%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 789px) {
+  .wrapper {
+    .textfield {
+      margin: 0 10px;
+      .inputfield {
+        width: 100%;
+      }
+      .selectItem {
+        margin-left: 20px;
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .wrapper {
+    .textfield {
+      margin: 0 10px;
+      .inputfield {
+        width: 100%;
+      }
+      .selectItem {
+        margin-left: 20px;
+        width: 100%;
+      }
     }
   }
 }
