--- a/src/styles/Chat.module.scss
+++ b/src/styles/Chat.module.scss
@@ -1,22 +1,53 @@
 .chat {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: #120428;
+  padding-top: 20px;
+  .chatWrapper {
+    background-color: #484153;
     display: flex;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    background-color: #120428;
-    padding-top: 20px;
-    .chatWrapper {
-      background-color: #484153;
-      display: flex;
-      height: calc(100vh - 110px);
-      width: 85%;
-      padding: 60px 80px 10px 10px;
-      .chatMenu {
-        width: 40%;
-        height: 100%;
-        padding: 0 10px
-      }
-
+    height: calc(100vh - 110px);
+    width: 85%;
+    padding: 60px 80px 10px 10px;
+    &.mobileChat {
+      padding: 0px 0px 0px 0px;
     }
-  
+    .chatMenu {
+      width: 40%;
+      height: 100%;
+      padding: 0 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .chat {
+    .chatWrapper {
+      padding: 40px 20px 10px 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 789px) {
+  .chat {
+    padding-top: 0;
+    .chatWrapper {
+      padding: 40px 40px 10px 10px;
+      width: 100%;
+      .chatMenu {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .chat {
+    flex-direction: column;
+    .chatWrapper {
+      width: 100%;
+    }
+  }
 }
