--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -9,6 +9,7 @@
   left: 0;
   right: 0;
   z-index: 100;
+  border-bottom: 1px solid #B885F4;
   .logoWrapper {
     display: flex;
     align-items: center;
