--- a/src/components/game/GameTextField/GameTextField.module.scss
+++ b/src/components/game/GameTextField/GameTextField.module.scss
@@ -21,7 +21,7 @@
     margin: 1.2rem;
     .boolBtn {
       width: 7rem;
-      height: 2.2remx;
+      height: 2.2rem;
       margin-right: 1.2rem;
     }
   }
